# Histo-Research

./: .gitignore  FIXED_ANALYSIS_SUMMARY.md  INFERENCE_USAGE.md  PAPER_READY_ANALYSIS_SUMMARY.md  TRAINING_ANALYSIS_GUIDE.md  TRAINING_STATUS.md  ablation_study_comparison.py  create_hepar_csv.py  create_pannuke_csv.py  extract_tile_embeddings.py  inference_config.json  inference_dae_kan.py  main.py  optimizations_README.md  pyproject.toml  run_ablation_study.py  test_dataset_switching.py  test_pannuke_config.py
auto_analysis/: metrics_20251004_091137.json  metrics_20251004_091153.json  metrics_20251004_091210.json  metrics_20251004_091228.json  metrics_20251004_091247.json  metrics_20251004_091306.json  metrics_20251004_091324.json  metrics_20251004_091344.json  metrics_20251004_091404.json  metrics_20251004_091425.json  metrics_20251004_091446.json  metrics_20251004_091507.json  metrics_20251004_091529.json  metrics_20251004_091551.json  metrics_20251004_091614.json
auto_analysis_elated-firebrand-3/: metrics_20251004_141145.json  metrics_20251004_141206.json
src/: histodata.py  pl_training.py  pl_training_optimized.py  pl_training_streamlined.py  pl_training_with_analysis.py  pl_training_with_analysis_and_optimization.py
src/analysis/: README.md  __init__.py  auto_analysis.py  requirements.txt
src/analysis/old_modules/: attention_visualizer.py  comprehensive_analysis.ipynb  enhanced_attention_analysis.py  (+6 more)
src/models/: factory.py  model.py  model_bam_only.py  model_baseline.py  model_kan_only.py  model_no_bam.py  model_no_eka.py  model_no_kan.py
(+15 files in other folders)
