[project]
name = "histodae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "altair>=5.5.0",
    "captum>=0.8.0",
    "click>=8.3.0",
    "fastplotlib>=0.5.1",
    "grad-cam>=1.5.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "patchify>=0.2.3",
    "pillow>=11.0.0",
    "plotly>=6.3.1",
    "polars>=1.33.1",
    "ptflops>=0.7.5",
    "pytorch-lightning>=2.5.5",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "thop>=0.1.1.post2209072238",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "voila>=0.5.11",
    "wandb>=0.22.1",
]

